fix: tokenbar right border too small

--- a/src/components/Dashboard/TokenBar.module.css
+++ b/src/components/Dashboard/TokenBar.module.css
@@ -48,3 +48,7 @@
   box-sizing: border-box;
   height: 42px;
 }
+
+.percentage .separator + .stakeable {
+  margin-left: 0;
+}
